--- a/src/components/StatusPanel/StatusPanel.css
+++ b/src/components/StatusPanel/StatusPanel.css
@@ -1,15 +1,18 @@
 .root {
   position: absolute;
-  top: 10px;
   right: 10px;
   z-index: 1000;
   display: flex;
   align-items: center;
-  font-size: 50px;
-  font-family: Silkscreen;
+  font-size: 48px;
+  font-family: Minecraftia;
+
+  font-smooth: never;
+  -webkit-font-smoothing: none;
 }
 
 .x {
   margin-left: 6px;
   margin-right: 6px;
+  margin-bottom: 12px;
 }
